feat: Confirmation of email communication sent implemented and some refactorings